Anonymous | Login | 2021-01-26 06:30 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031036 | Open CASCADE | [OCCT] OCCT:Foundation Classes | public | 2019-10-05 21:53 | 2020-12-02 17:12 | ||||
Reporter | kgv | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | feature | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | |||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031036: Foundation Classes, Message_PrinterOStream - add option printing colored text into console | ||||||||
Description | Colored output would make messages with different gravity more distinguishable. Therefore, it is proposed adding appropriate option to Message_PrinterOStream. | ||||||||
Steps To Reproduce | pload VISUALIZATION;dtracelevel trace;vinit View1 vrenderparams -option text2brep t2 "Text" -font "DUMMY" vfont -verbose text2brep t1 "Text" -font "Times" vpoint p 0 0 0;vclear he vs* | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | ![]() ![]() | ||||||||
![]() |
|||||||||||
|
![]() |
|
(0087865) git (administrator) 2019-10-05 22:03 |
Branch CR31036 has been created by kgv. SHA-1: e635593a60a4f45d88003bb4a4769eec34f2e365 Detailed log of new commits: Author: kgv Date: Sat Oct 5 22:01:09 2019 +0300 0031036: Foundation Classes, Message_PrinterOStream - add option printing colored text into console New property Message_PrinterOStream::ToColorize() can be set to colorize text output into console. The new option is disabled by default. |
(0087866) abv (manager) 2019-10-05 22:17 |
Cool! |
(0087869) git (administrator) 2019-10-05 22:31 |
Branch CR31036 has been updated forcibly by kgv. SHA-1: 49fdcbf839111cc8e1b72e96bbaa75fa711dd01a |
(0087871) kgv (developer) 2019-10-05 22:35 |
Patch is ready for review. Note that without 0030697 this is useless for Draw Harness. It might be also considered enabled by default (but disabled within "testgrid" to avoid special codes in test logs redirected from std::cout). |
(0087934) abv (manager) 2019-10-08 07:53 |
In Message_PrinterOStream, please make names of getter and setter methods coherent: either ToColorize() and SetToColorize(), or Colorize() and SetColorize() |
(0087938) git (administrator) 2019-10-08 10:37 |
Branch CR31036 has been updated forcibly by kgv. SHA-1: eb2e8d2693ae6887763112b4289dcc831737e5a5 |
(0087939) kgv (developer) 2019-10-08 10:37 |
Renamed. |
(0088030) abv (manager) 2019-10-11 03:43 |
Reviewed, please integrate |
(0088480) git (administrator) 2019-10-23 11:51 |
Branch CR31036 has been deleted by kgv. SHA-1: eb2e8d2693ae6887763112b4289dcc831737e5a5 |
![]() |
|||
occt: master e1d039d5
Timestamp: 2019-10-05 19:01:09 Author: kgv Committer: apn [ Details ] [ Diff ] |
0031036: Foundation Classes, Message_PrinterOStream - add option printing colored text into console New property Message_PrinterOStream::ToColorize() can be set to colorize text output into console. The new option is disabled by default. |
||
mod - src/Message/FILES | [ Diff ] [ File ] | ||
add - src/Message/Message_ConsoleColor.hxx | [ Diff ] [ File ] | ||
mod - src/Message/Message_PrinterOStream.cxx | [ Diff ] [ File ] | ||
mod - src/Message/Message_PrinterOStream.hxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-10-05 21:53 | kgv | New Issue | |
2019-10-05 21:53 | kgv | Assigned To | => abv |
2019-10-05 21:53 | kgv | File Added: draw_colored.png | |
2019-10-05 22:03 | git | Note Added: 0087865 | |
2019-10-05 22:16 | kgv | Relationship added | related to 0030697 |
2019-10-05 22:17 | abv | Note Added: 0087866 | |
2019-10-05 22:30 | kgv | File Added: console_colors_linux.png | |
2019-10-05 22:31 | git | Note Added: 0087869 | |
2019-10-05 22:35 | kgv | Note Added: 0087871 | |
2019-10-05 22:35 | kgv | Status | new => resolved |
2019-10-08 07:53 | abv | Note Added: 0087934 | |
2019-10-08 07:53 | abv | Assigned To | abv => kgv |
2019-10-08 07:53 | abv | Status | resolved => assigned |
2019-10-08 10:37 | git | Note Added: 0087938 | |
2019-10-08 10:37 | kgv | Note Added: 0087939 | |
2019-10-08 10:37 | kgv | Assigned To | kgv => abv |
2019-10-08 10:37 | kgv | Status | assigned => resolved |
2019-10-11 03:43 | abv | Note Added: 0088030 | |
2019-10-11 03:43 | abv | Assigned To | abv => bugmaster |
2019-10-11 03:43 | abv | Status | resolved => reviewed |
2019-10-23 01:07 | apn | Changeset attached | => occt master e1d039d5 |
2019-10-23 01:07 | apn | Assigned To | bugmaster => apn |
2019-10-23 01:07 | apn | Status | reviewed => verified |
2019-10-23 01:07 | apn | Resolution | open => fixed |
2019-10-23 11:51 | git | Note Added: 0088480 | |
2019-10-23 16:54 | apn | Test case number | => Not needed |
2019-11-23 01:52 | kgv | Relationship added | parent of 0031188 |
2020-09-22 22:50 | kgv | Steps to Reproduce Updated | View Revisions |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |