0031036: Foundation Classes, Message_PrinterOStream - add option printing colored text into console

New property Message_PrinterOStream::ToColorize() can be set to colorize text output into console.
The new option is disabled by default.